--- a/Ejercicio-1/css/style.css
+++ b/Ejercicio-1/css/style.css
@@ -1,13 +1,15 @@
 body {
     background-image: url("../assets/background.png");
-    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
 }
 
 .principal {
-    width: 33vw;
-    height: 70vh;
+    width: 500px;
+    height: 700px;
 }
 
 #label {
@@ -39,4 +41,10 @@ input {
 #media {
     background-color: black;
     width: 90%;
+}
+
+@media screen and (max-width: 600px) {
+    .principal {
+        width: 80vw;
+    }
 }
