Ejercicio 2 y cambio menor en 1

--- a/Ejercicio-2/css/style.css
+++ b/Ejercicio-2/css/style.css
@@ -7,10 +7,6 @@ body {
     color: rgb(96,173,231);
 }
 
-.principal {
-    width: 90vw;
-}
-
 i {
     height: 1em;
     width: 1em;
@@ -18,19 +14,15 @@ i {
     color: rgb(96,173,231);
 }
 
-input {
-    width: 50vw;
-}
-
-#background {
-    background-color: rgb(245,245,245);
-}
-
-#big {
+.big {
     height: 28vh;
+    width: 40vh;
 }
 
-#submit {
-    width: 5vw;
+.submit {
+    width: 30vw;
 }
 
+.haha {
+    padding-top: 2vh;
+}
