--- a/Ejercicio-2/css/style.css
+++ b/Ejercicio-2/css/style.css
@@ -1,6 +1,12 @@
 body {
     height: 100vh;
+    width: 80vw;
+}
+
+.principal {
+    height: 100vh;
     width: 100vw;
+    background-color: whitesmoke;
 }
 
 .contact {
